--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Layout/_LayoutHost.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Layout/_LayoutHost.cshtml
@@ -5,6 +5,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link href='https://cdn.jsdelivr.net/npm/froala-editor@latest/css/froala_editor.pkgd.min.css' rel='stylesheet' type='text/css' />
+    <script type='text/javascript' src='https://cdn.jsdelivr.net/npm/froala-editor@latest/js/froala_editor.pkgd.min.js'></script>
     <link rel="icon"
           type="image/x-icon"
           href="https://cdn-icons-png.flaticon.com/512/6556/6556219.png" />
@@ -59,7 +61,7 @@
                     <!-- Layouts -->
 
                     <li class="menu-item">
-                        <a href="PartyManagement" class="menu-link">
+                        <a href="/Host/HostParty/PartyManagement" class="menu-link">
                             <i class="menu-icon fa-solid fa-person-booth"></i>
                             <div data-i18n="Layouts">Quản lý phòng tiệc</div>
                         </a>
@@ -91,20 +93,13 @@
                             <div data-i18n="Layouts">Package</div>
                         </a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                           aria-expanded="false" id="navbarDropdownAdmin">
-                            Admin
+
+                    <li class="menu-item">
+                        <a href="/Host/BlogPosts/List" class="menu-link">
+                            <div data-i18n="Layouts">Blog Post</div>
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navabarDropdownAdmin">
-                            <li>
-                                <a class="dropdown-item" href="/admin/blogs/add">Add Blog Post</a>
-                            </li>
-                                <li>
-                                    <a class="dropdown-item" href="/admin/blogs/list">Blog Posts</a>
-                                </li>
-                        </ul>
                     </li>
+
                     <li class="menu-header small text-uppercase">
                         <span class="menu-header-text">Account &amp; User</span>
                     </li>
@@ -178,6 +173,7 @@
             </div>
         </div>
     </div>
+     @RenderSectionAsync("Scripts", required: false)
 </body>
 <script>
     function logout() {
