Fix layout  Host

--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Layout/_LayoutHost.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Layout/_LayoutHost.cshtml
@@ -179,7 +179,7 @@
             </div>
         </div>
     </div>
-     @RenderSectionAsync("Scripts", required: false)
+     @* @RenderSectionAsync("Scripts", required: false) *@
 </body>
 <script>
     function logout() {
