--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Host/BlogPosts/Add.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Host/BlogPosts/Add.cshtml
@@ -88,6 +88,12 @@
                                             </div>
 
                                             <div class="mb-3">
+                                                <label for="featuredImageUpload" class="form-label">Featured Image Upload</label>
+                                                <input type="file" id="featuredImageUpload" asp-for="FeaturedImage" />
+                                                <img src="" id="featuredImageDisplay" style="display:none; width:300px;" />
+                                            </div>
+
+                                            <div class="mb-3">
                                                 <label for="featuredImageUrl" class="form-label">Featured Image Url</label>
                                                 <input type="text" class="form-control" id="featuredImageUrl" asp-for="AddBlogModelRequest.ImageUrl">
                                             </div>
@@ -115,9 +121,36 @@
             </div>
         </div>
     </div>
-    @section Scripts{
-        <script>
-            var editor = new FroalaEditor('#content');
-        </script>
-    }
+    <script>
+        var editor = new FroalaEditor('#content', {
+            imageUploadURL: '/api/image'
+        });
+
+        const featuredImageUploadElement = document.getElementById('featuredImageUpload');
+        const featuredImageUrl = document.getElementById('featuredImageUrl');
+        const featuredImageDisplay = document.getElementById('featuredImageDisplay');
+
+
+        async function uploadFeaturedImage(e) {
+            console.log(e.target.files[0]);
+
+            let data = new FormData();
+            data.append('file', e.target.files[0]);
+
+            await fetch('/api/image', {
+                method: 'POST',
+                headers: {
+                    'Accept': '*/*',
+                },
+                body: data
+            }).then(response => response.json())
+                .then(result => {
+                    featuredImageUrl.value = result.link;
+                    featuredImageDisplay.style.display = 'block';
+                    featuredImageDisplay.src = result.link;
+                });
+        }
+
+        featuredImageUploadElement.addEventListener('change', uploadFeaturedImage);
+    </script>
 </body>
