--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Host/BlogPosts/Edit.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Host/BlogPosts/Edit.cshtml
@@ -104,7 +104,18 @@
 
                                             </div>
 
-
+                                            <div class="mb-3">
+                                                <label for="featuredImageUpload" class="form-label">Featured Image Upload</label>
+                                                <input type="file" id="featuredImageUpload" asp-for="FeaturedImage" />
+                                                @if(Model.BlogPost.ImageUrl != null)
+                                                {
+                                                    <img src="@Model.BlogPost.ImageUrl" id="featuredImageDisplay" style="display:none; width:300px;" />
+                                                }
+                                                else
+                                                {
+                                                    <img src="" id="featuredImageDisplay" style="display:none; width:300px;" />
+                                                }
+                                            </div>
 
                                             <div class="mb-3">
                                                 <label for="featuredImageUrl" class="form-label">Featured Image Url</label>
@@ -139,9 +150,36 @@
             </div>
         </div>
     </div>
-    @section Scripts{
         <script>
-            var editor = new FroalaEditor('#content');
+        var editor = new FroalaEditor('#content', {
+            imageUploadURL: '/api/image'
+        });
+
+        const featuredImageUploadElement = document.getElementById('featuredImageUpload');
+        const featuredImageUrl = document.getElementById('featuredImageUrl');
+        const featuredImageDisplay = document.getElementById('featuredImageDisplay');
+
+
+        async function uploadFeaturedImage(e) {
+            console.log(e.target.files[0]);
+
+            let data = new FormData();
+            data.append('file', e.target.files[0]);
+
+            await fetch('/api/image', {
+                method: 'POST',
+                headers: {
+                    'Accept': '*/*',
+                },
+                body: data
+            }).then(response => response.json())
+                .then(result => {
+                    featuredImageUrl.value = result.link;
+                    featuredImageDisplay.style.display = 'block';
+                    featuredImageDisplay.src = result.link;
+                });
+        }
+
+        featuredImageUploadElement.addEventListener('change', uploadFeaturedImage);
         </script>
-    }
 </body>
