--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Guest/PartyView.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Guest/PartyView.cshtml
@@ -67,15 +67,13 @@
                                         <small class="fa fa-star text-primary"></small>
                                     </div>
                                 </div>
-                                <div class="d-flex mb-3">
-                                    <small class="border-end me-3 pe-3"><i class="fa fa-palette text-primary me-2"></i>@Html.DisplayFor(modelItem => item.Theme)</small>
+                                <div class="d-flex mb-3">                    
                                     <small class="border-end me-3 pe-3"><i class="fa fa-users text-primary me-2"></i>@Html.DisplayFor(modelItem => item.MaxPeople)</small>
                                     <small><i class="fa fa-map-marker text-primary me-2"></i>@Html.DisplayFor(modelItem => item.City)</small>
                                     <i class="fa-solid fa-map-location-dot"></i>
-                                </div>
-                                <p class="text-body mb-3">@Html.DisplayFor(modelItem => item.Description)</p>
+                                </div>                               
                                 <div class="d-flex justify-content-between">
-                                    <a class="btn btn-sm btn-primary rounded py-2 px-4" href="">View Detail</a>
+                                    <a asp-page="PartyDetail" asp-route-id="@item.Id" class="btn btn-sm btn-primary rounded py-2 px-4">View Detail</a>
                                     <a class="btn btn-sm btn-dark rounded py-2 px-4" href="">Book Now</a>
                                 </div>
                             </div>
