--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Host/HostParty/PartyManagement.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Host/HostParty/PartyManagement.cshtml
@@ -8,53 +8,7 @@
 
 
 
-<head>
-    <meta charset="utf-8" />
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
 
-    <meta name="description" content="" />
-
-    <!-- Favicon -->
-    <link rel="icon"
-          type="image/x-icon"
-          href="https://cdn-icons-png.flaticon.com/512/6556/6556219.png" />
-
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
-          rel="stylesheet" />
-
-    <link rel="stylesheet" href="~/js/vendor/fonts/boxicons.css" />
-
-    <!-- Core CSS -->
-    <link rel="stylesheet"
-          href="~/js/vendor/css/core.css"
-          class="template-customizer-core-css" />
-    <link rel="stylesheet"
-          href="~/js/vendor/css/theme-default.css"
-          class="template-customizer-theme-css" />
-    <link rel="stylesheet" href="~/css/demo.css" />
-
-    <!-- Vendors CSS -->
-    <link rel="stylesheet"
-          href="~/js/vendor/libs/perfect-scrollbar/perfect-scrollbar.css" />
-
-    <!-- Page CSS -->
-    <!-- Helpers -->
-    <script src="~/js/vendor/js/helpers.js"></script>
-    <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
-    <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="~/js/js/config.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
-    <!-- Thư viện jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
-    <!-- Thư viện Bootstrap JS -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-</head>
 <body>
     <!-- Layout wrapper -->
     <!-- Layout container -->
@@ -105,7 +59,7 @@
                 </h5>
 
                 <div class="table-responsive text-nowrap">
-                    <table class="table">
+                    <table id="myTable" class="table">
                         <thead>
                             <tr>
                                 <th>STT</th>
@@ -157,11 +111,11 @@
 
                                         @if (item.Status == false)
                                         {
-                                            <span style="color: red; font-weight: bold">Đang được book</span>
+                                            <span style="color: red; font-weight: bold">Đang chờ duyệt</span>
                                         }
                                         else if (item.Status == true)
                                         {
-                                            <span style="color: green; font-weight: bold">Có thể book</span>
+                                            <span style="color: green; font-weight: bold">Đã được duyệt</span>
                                         }
                                     </td>
                                     @* <td>
@@ -220,7 +174,7 @@
                 </div>
                 <!-- toast thông báo thành công-->
 
-                <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
+        @*         <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
                     <div id="toast-notification" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
                         <div class="toast-header">
                             <strong id="toast-message" class="me-auto"></strong>
@@ -228,36 +182,10 @@
                             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
                         </div>
                     </div>
-                </div>
+                </div> *@
 
             </div>
-            <nav aria-label="Page navigation"
-                 style="position: fixed;
-                                 bottom: 0.25rem;
-                                 right: 1.5rem;">
-                <ul class="pagination">
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
-                            <span aria-hidden="true">&laquo;</span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                    </li>
-                    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                    <c:set var="page" value="${totalSize / 50}" />
-                    <c:if test="${totalSize % 50 > 0}">
-                        <c:set var="totalPages" value="${page + 1}" />
-                    </c:if>
-                    <c:forEach var="i" begin="2" end="${totalPages}">
-                        <li class="page-item"><a class="page-link" href="#"><c:out value="${i}" /></a></li>
-                    </c:forEach>
-                    <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
-                            <span aria-hidden="true">&raquo;</span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
+           
         </div>
     </div>
     @* </div> *@
@@ -309,18 +237,5 @@
     <!-- Core JS -->
     <!-- build:js assets/vendor/js/core.js -->
 
-    <script src="~/js/vendor/libs/jquery/jquery.js"></script>
-    <script src="~/js/vendor/libs/popper/popper.js"></script>
-    <script src="~/js/vendor/js/bootstrap.js"></script>
-    <script src="~/js/vendor/libs/perfect-scrollbar/perfect-scrollbar.js"></script>
-    <script src="~/js/vendor/js/menu.js"></script>
 
-    <!-- endbuild -->
-    <!-- Vendors JS -->
-    <!-- Main JS -->
-    <script src="~/js/main.js"></script>
-
-    <!-- Page JS -->
-    <!-- Place this tag in your head or just before your close body tag. -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
 </body>
