--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Guest/PartyView.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Guest/PartyView.cshtml
@@ -74,7 +74,7 @@
                                 </div>                               
                                 <div class="d-flex justify-content-between">
                                     <a asp-page="PartyDetail" asp-route-id="@item.Id" class="btn btn-sm btn-primary rounded py-2 px-4">View Detail</a>
-                                    <a class="btn btn-sm btn-dark rounded py-2 px-4" href="">Book Now</a>
+                                    <a class="btn btn-sm btn-dark rounded py-2 px-4" href="/Guest/Booking/@item.Id">Book Now</a>
                                 </div>
                             </div>
                         </div>
