--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Layout/_LayoutHost.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Layout/_LayoutHost.cshtml
@@ -127,7 +127,12 @@
                             <div data-i18n="Layouts">Quản lý phòng tiệc</div>
                         </a>
                     </li>
-
+                    <li class="menu-item">
+                        <a href="/Host/HostBooking/List" class="menu-link">
+                            <i class="menu-icon fa-solid fa-person-booth"></i>
+                            <div data-i18n="Layouts">Booking Management</div>
+                        </a>
+                    </li>
 
                     <li class="menu-header small text-uppercase">
                         <span class="menu-header-text">Management</span>
