--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Guest/Booking.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Guest/Booking.cshtml
@@ -62,11 +62,12 @@
                                                 <input type="date" class="form-control" id="startedDate" asp-for="AddBooking.StartDate">
                                             </div>
                                             <input type="submit" value="Book" class="btn btn-primary" />
-                                            <a style="text-decoration: none;
-                                                   color: inherit;" asp-page="List">
-                                                <button type="button" class="btn btn-primary">Back to List</button>
-                                            </a>
+                                          
                                         </form>
+                                        <a style="text-decoration: none;
+                                                   color: inherit;" href="/Guest/PartyView">
+                                            <button type="button"  class="btn btn-secondary">Back</button>
+                                        </a>
                                     </div>
                                 </div>
                             </div>
