--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Guest/PartyDetail.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Guest/PartyDetail.cshtml
@@ -79,7 +79,7 @@
                     </div>
                     <div class="d-flex justify-content-start fs-5">
                         <!-- <a class="btn btn-sm btn-primary rounded py-2 px-4" href="">View Detail</a> -->
-                        <a class="btn btn-sm btn-dark rounded py-2 px-4" href="">Book Now</a>
+                        <a class="btn btn-sm btn-dark rounded py-2 px-4" href="./Booking/@party.Id">Book Now</a>
                     </div>
 
                 </div>
