--- a/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Layout/_LayoutUser.cshtml
+++ b/PRN221_GroupProjectBookParty/PRN221_GroupProjectBookParty/Pages/Layout/_LayoutUser.cshtml
@@ -81,7 +81,7 @@
                                     <i class="bi bi-person-circle"></i>Welcome, @loginUserName
                                 </a>
                                 <div class="dropdown-menu rounded-0 m-0">
-                                    <a asp-page="/ViewProfile/@loginUser.Id" class="dropdown-item">Profile</a>
+                                    <a href="/ViewProfile/@loginUser.Id" class="dropdown-item">Profile</a>
                                     <a asp-page="/Authentication/Logout" class="dropdown-item">Logout</a>
                                 </div>
                             </div>
